# cmake_hello_windows

./: CMakeLists.txt  Commands.bat  README.md  config.h  main.cc
math/: MathFunctions.cc  MathFunctions.h
